SigmaCodebackup3rdSep/objects/Work_Type__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Gantt_Chart_Slot_Duration__c</fullName>
        <label>Gantt Chart Slot Duration</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gantt_Grid__c</fullName>
        <label>Gantt Grid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Work Type</label>
        <referenceTo>Work_Type__c</referenceTo>
        <relationshipLabel>Work_Type</relationshipLabel>
        <relationshipName>Related_WorkType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Charge__c</fullName>
        <label>Service Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Work Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inactive__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>